[gd_scene load_steps=5 format=3 uid="uid://4omlrg65c157"]

[ext_resource type="Script" uid="uid://1fjbuvieye0f" path="res://game/gamescripts/nodes/infr/outer_rail_track.gd" id="1_y72mo"]
[ext_resource type="ArrayMesh" uid="uid://co6ollv1jfm4m" path="res://assets/meshes/infr/rail/rail_track_normal/rail_track_normal_ground.obj" id="2_y72mo"]
[ext_resource type="ArrayMesh" uid="uid://cbvd8qsqmfkle" path="res://assets/meshes/infr/rail/rail_track_normal/rail_track_normal_tracks.obj" id="3_p268h"]

[sub_resource type="Curve3D" id="Curve3D_rd07l"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 0),
"tilts": PackedFloat32Array(0)
}
point_count = 1

[node name="OuterRailTrack" type="Node3D"]
script = ExtResource("1_y72mo")

[node name="TrackPath" type="Path3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 2, 0, 0, 0, 1.5, 0, 0, 0)
curve = SubResource("Curve3D_rd07l")

[node name="BedPathMesh" type="PathMesh3D" parent="." node_paths=PackedStringArray("path_3d")]
path_3d = NodePath("../TrackPath")
mesh = ExtResource("2_y72mo")
surface_0/tile_rotation = Vector3(0, 0, 0)
surface_0/tile_rotation_order = 2
surface_0/distribution = 0
surface_0/alignment = 0
surface_0/warp_along_curve = true
surface_0/sample_cubic = false
surface_0/tilt = true
surface_0/offset = Vector2(0, 0)
surface_0/triangle_count = 0

[node name="TrackPathMesh" type="PathMesh3D" parent="." node_paths=PackedStringArray("path_3d")]
path_3d = NodePath("../TrackPath")
mesh = ExtResource("3_p268h")
surface_0/tile_rotation = Vector3(0, 0, 0)
surface_0/tile_rotation_order = 2
surface_0/distribution = 0
surface_0/alignment = 0
surface_0/warp_along_curve = true
surface_0/sample_cubic = false
surface_0/tilt = true
surface_0/offset = Vector2(0, 0)
surface_0/triangle_count = 0
surface_1/tile_rotation = Vector3(0, 0, 0)
surface_1/tile_rotation_order = 2
surface_1/distribution = 0
surface_1/alignment = 0
surface_1/warp_along_curve = true
surface_1/sample_cubic = false
surface_1/tilt = true
surface_1/offset = Vector2(0, 0)
surface_1/triangle_count = 0
